Version 0.10:
	
	* Fix Neuberging boards which weren't played as many times
	* Fix NPE with nonexistent pairs
	* Fix Individual scorecards
	* Fix Local-pointing with everyone getting points
	* Make PDF output tables bigger

Version 0.9:

	* Rewrite everything with Java generics to remove all the warnings
	* Add split-tie procedures (only works for 2-way split-tie in
	  all-play-all pairs or individual events)
	* Add different master point scales, now copes with:
		- club/district/county/regional/national scales
		- 12+ boards not just 18-35
		- quali-final scales

Version 0.8:
	
	* Fix LP allocation with odd number of pairs
	* Add personal score card generation
	* Fix MP calculations with AV-/+

Version 0.7.1:

	* Patch to build with itext 2.x

Version 0.7:

	* Support any number of names (currently only in cmd line).
	  Supersedes individual support
	* Add leaderboard binary for creating leaderboard/results pages
	* Add html-fragment output
	* Add csv output
	* Add teams of (4 or 8) scoring
	* Update manual page

Version 0.6:

	* Add handicap support
	* Add ECATS upload support

Version 0.5.2:

	* Fix translation keys
	* add ecl2salliere script

Version 0.5.1:

	* Move installation directories around, 
	  only install into $PREFIX/share/salliere/

Version 0.5:

	* Support XIMP as well as Matchpointing
	* Support for individuals (currently only in cmd line)
	* Support for imping against par
	* Correct masterpoint awards
	* Open all file choosers in dir of last file operation
	* Fix display of redoubled contracts

Version 0.4:

	* Support averages
	* Support assigned/ajusted/split scores
	* forcing score supported in GSalliere

Version 0.3:

	* Support b33r card
	* board ordering knows about sections and vulnerabilities
	* --setsize parameter to check sets of n boards per round for matching 
	  pair numbers
	* output hands within boards sorted by NS pair number (Suggested by
	  Carrie Oliver <cho21 -at- cam -dot- ac -dot- uk>)
	* gsalliere graphical frontend